Update MaxSumOfThreeSubarrays.java