@@ -1,5 +1,4 @@
 package leetcode._689_三个无重叠数组的最大和;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
@@ -21,66 +20,61 @@ public class MaxSumOfThreeSubarrays {
             }
         }
         int []result=new int[3];
-        System.out.println(Arrays.toString(sums));
-        //排序
-        List<Integer> collect = Arrays.stream(sums)
-                .limit(sums.length - k + 1)
-                .sorted()
-                .boxed()
-                .collect(Collectors.toList());
-        System.out.println(collect);
+//        System.out.println(Arrays.toString(sums));
 
         //索引排序
-        List<Integer> indexs = IntStream.range(0, sums.length - k + 1).boxed().collect(Collectors.toList());
-        indexs.sort(Comparator.comparingInt(i -> sums[i]));
-        System.out.println(indexs);
-
-        ArrayList<Integer> tempList=new ArrayList<>(collect);
-        indexs.removeAll(IntStream.range(0,k-1).boxed().toList());
-        System.out.println(indexs);
+        List<Integer> indexs = IntStream.range(0, sums.length - k + 1).boxed().sorted(Comparator.comparingInt(i -> sums[i])).collect(Collectors.toList());
+//        indexs.removeAll(IntStream.range(0,k-1).boxed().toList());
+        for(int i=0;i<k;i++){
+            indexs.remove(Integer.valueOf(i));
+        }
         int max=Integer.MIN_VALUE;
         //左指针后移
         for (int lp=0;lp<sums.length-2*k-1;lp++) {
             //去除无用的
-            indexs.remove(Integer.valueOf(lp+k-1));
-            //取后k+1个循环求最大值
-//            indexs.subList(,)
-            System.out.println(indexs);
-            List<Integer> subList = indexs.subList(indexs.size() - k-1, indexs.size());
-//            for (int i=0;i<subList.size();i++){
-//                for (int j=i+1;j<subList)
-//            }
-            System.out.println(subList);
+            indexs.remove(Integer.valueOf(lp + k - 1));
+            for (int i = indexs.size() - 1; i >= 0; i--) {
+                if (max!=Integer.MIN_VALUE && max-sums[lp]>2*sums[indexs.get(i)]){
+                    break;
+                }
+                for (int j = i - 1; j >= 0; j--) {
+                    //两数相互隔距离足够
+                    if (Math.abs(indexs.get(i) - indexs.get(j)) >= k) {
+                        int tSum = sums[lp] + sums[indexs.get(i)] + sums[indexs.get(j)];
+                        //更大，更新最大值
+                        if (max < tSum) {
+                            max = tSum;
+                            result[0] = lp;
+                            result[1] = Math.min(indexs.get(i),indexs.get(j));
+                            result[2] = Math.max(indexs.get(i),indexs.get(j));
+                        }
+                    }
+                }
+            }
+        }
+        //第二第三个数字向左移动
+        for (int index=result[0]+k;index<result[1];index++){
+            if (sums[index]==sums[result[1]]){
+                result[1]=index;
+            }
+        }
+        for (int index=result[1]+k;index<result[2];index++){
+            if (sums[index]==sums[result[2]]){
+                result[2]=index;
+            }
         }
 
-
-//        //先暴力试试吧
-//        //三指针
-//        int lp=0,mp,rp=nums.length-k;
-//        //头指针后移
-//        for (lp=0;lp<sums.length-2*k;lp++){
-//            //尾指针后
-//            for (rp=lp+2*k;rp<=sums.length-k;rp++){
-//                //中指针后移
-//                for (mp=lp+k;mp<=rp-k;mp++){
-//                    int tSum=sums[lp]+sums[mp]+sums[rp];
-//                    //更大，更新最大值
-//                    if (max<tSum){
-//                        max=tSum;
-//                        result[0]=lp;
-//                        result[1]=mp;
-//                        result[2]=rp;
-//                    }
-//                }
-//            }
-//        }
-
+//        System.out.println(max);
 //        System.out.println(Arrays.toString(result));
         return result;
     }
 
     public static void main(String[] args) {
         MaxSumOfThreeSubarrays maxSumOfThreeSubarrays =new MaxSumOfThreeSubarrays();
-        maxSumOfThreeSubarrays.maxSumOfThreeSubarrays(new int[]{1,2,1,2,6,7,5,1},2);
+//        maxSumOfThreeSubarrays.maxSumOfThreeSubarrays(new int[]{1,2,1,2,6,7,5,1},2);
+//        maxSumOfThreeSubarrays.maxSumOfThreeSubarrays(new int[]{1,2,1,2,1,2,1,2,1,2},2);
+//        maxSumOfThreeSubarrays.maxSumOfThreeSubarrays(new int[]{9,8,7,6,2,2,2,2},2);
+        int[] ints = maxSumOfThreeSubarrays.maxSumOfThreeSubarrays(new int[]{17,7,19,11,1,19,17,6,13,18,2,7,12,16,16,18,9,3,19,5}, 6);
+        System.out.println(Arrays.toString(ints));
     }
 }
